# FlatEngine

./: .gitignore  .gitmodules  CMakeLists.txt  FlatEngine.sln  README.md  premake5.lua
FlatEngine/: FlatEngine.vcxproj  FlatEngine.vcxproj.filters
FlatEngine/src/: Core.h  FlatEngine.h
FlatEngine/src/Core/: App.cpp  App.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Source.cpp
cmake/: Functions.cmake  GenerateProjects.bat  GenerateProjectsAfterClean.bat  SetupConfigurations.cmake  SetupGlobalDirectories.cmake  SetupGlobalProperties.cmake  SetupProject.cmake  SetupVendorLibs.cmake
include/FlatEngine/Actors/: Controllers.h
include/FlatEngine/Core/: App.h  GameLooper.h  ModulesHeader.h
include/FlatEngine/Core/Objects/: GameObject.h  ObjectComponent.h
include/FlatEngine/Core/Time/: TimeHeader.h  TimeModule.h
include/FlatEngine/Core/Transform/: IMovable.h  IRotatable.h  IScalable.h  ITransformable.h  Transform.h  Transformable.h
include/FlatEngine/Core/Update/: UpdateElement.h  UpdateHeader.h  UpdateModule.h
include/FlatEngine/Display/: DisplayHeader.h  DisplayModule.h
include/FlatEngine/Display/DisplayElements/: Animation.h  Image.h  Shape.h
src/FlatEngine/: CMakeLists.txt
src/FlatEngine/Actors/: CMakeLists.txt
src/FlatEngine/Audio/: CMakeLists.txt
src/FlatEngine/Core/: CMakeLists.txt
src/FlatEngine/Core/Audio/: CMakeLists.txt
src/FlatEngine/Core/Collision/: CMakeLists.txt
src/FlatEngine/Core/Core/: CMakeLists.txt
src/FlatEngine/Core/Display/: CMakeLists.txt
src/FlatEngine/Core/Display/Camera/: Camera.cpp  CameraManager.cpp
src/FlatEngine/Core/Display/Elements/: Animation.cpp  Image.cpp  Shape.cpp
src/FlatEngine/Core/Display/Main/: DisplayElement.cpp  DisplayModule.cpp
src/FlatEngine/Core/Display/Tools/: FrameSpeed.cpp  ScreenSettings.cpp  Sprite.cpp
src/FlatEngine/Core/Input/: CMakeLists.txt
src/FlatEngine/Core/Input/Elements/: Mouse.cpp
src/FlatEngine/Core/Input/Elements/Delta/: Delta.cpp  DeltaMouseWheel.cpp  DeltaPressable.cpp
src/FlatEngine/Core/Input/Elements/Press/: Pressable.cpp  PressableKey.cpp  PressableMouse.cpp
src/FlatEngine/Core/Input/Elements/Vector/: Vector.cpp  VectorDelta.cpp  VectorMouse.cpp  VectorPressable.cpp
src/FlatEngine/Core/Input/Main/: InputElement.cpp  InputModule.cpp
src/FlatEngine/Core/Main/: CMakeLists.txt
src/FlatEngine/Core/Main/Tools/Vector/: VectorTools.cpp
src/FlatEngine/Core/Objects/: CMakeLists.txt  GameObject.cpp  ObjectComponent.cpp
src/FlatEngine/Core/Time/: CMakeLists.txt  TimeModule.cpp
src/FlatEngine/Core/Tools/: CMakeLists.txt
src/FlatEngine/Core/Tools/Events/: FunctionIdGetter.h
src/FlatEngine/Core/Tools/Vector/: VectorTools.cpp
src/FlatEngine/Core/Transform/: CMakeLists.txt  Transform.cpp  Transformable.cpp
src/FlatEngine/Core/Update/: CMakeLists.txt  UpdateElement.cpp  UpdateModule.cpp
src/FlatEngine/Display/: CMakeLists.txt  DisplayElement.cpp  DisplayModule.cpp
src/FlatEngine/Engine/: CMakeLists.txt
src/FlatEngine/Input/: CMakeLists.txt  InputElement.cpp  InputModule.cpp
src/FlatEngine/Modules/: CMakeLists.txt
src/FlatEngine/Physics/: CMakeLists.txt
src/FlatEngine/Sandbox/: CMakeLists.txt  EntryPoint.cpp
src/FlatEngine/Tools/: CMakeLists.txt
src/Sandbox/: CMakeLists.txt  EntryPoint.cpp
(+165 files in other folders)
