
project(Sandbox)

string(TOUPPER ${PROJECT_NAME} PROJECT_UPPER_NAME)

set(FLAT_CURRENT_SOURCE_DIR "${FLAT_SOURCE_DIR}/${PROJECT_NAME}")

set(CURRENT_SOURCES "${PROJECT_UPPER_NAME}_SOURCES")

set(${CURRENT_SOURCES}
    "${FLAT_CURRENT_SOURCE_DIR}/EntryPoint.cpp"
	)


add_executable(${PROJECT_NAME} ${SANDBOX_SOURCES})
set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT Sandbox)
set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER Sandbox)
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${FLAT_CONFIG_BIN_DIR}/Sandbox")
set_target_properties(${PROJECT_NAME} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY "${FLAT_CONFIG_BIN_DIR}/Sandbox")
set_target_properties(${PROJECT_NAME} PROPERTIES LIBRARY_OUTPUT_DIRECTORY "${FLAT_CONFIG_BIN_DIR}/Sandbox")

target_link_libraries(${PROJECT_NAME} PUBLIC flat::core)
target_include_directories(${PROJECT_NAME} PRIVATE ${FLAT_INCLUDE_DIR})