cmake_minimum_required(VERSION 3.13 FATAL_ERROR)

project(Core CXX)

set_library_dirs(LIBRARY_NAME ${PROJECT_NAME})

set_library_sources(LIBRARY_NAME ${PROJECT_NAME}
    SOURCES
    "${FLAT_CURRENT_SOURCE_DIR}/App.cpp"
    )

set_library_public_headers(LIBRARY_NAME ${PROJECT_NAME}
    PUBLIC_HEADERS
    "${FLAT_CURRENT_INCLUDE_DIR}/App.h"
    )

add_flat_library(LIBRARY_NAME ${PROJECT_NAME} INCLUDE_DIRS ${FLAT_CURRENT_INCLUDE_DIR} ${SFML_INCLUDE_DIR} SOURCES ${FLAT_CURRENT_SOURCES} ${FLAT_CURRENT_PUBLIC_HEADERS})
target_link_libraries(${PROJECT_NAME} SFML)